k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ranieri-ingress
  namespace: ranieri-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - api.ranieri-core.ru
    secretName: tls-secret
  rules:
  - host: api.ranieri-core.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ranieri-service
            port:
              number: 80
